logs/trapes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/trapes'...
Compiling './lib/python3.5/site-packages/trapes/paired_end.py'...
***   File "./lib/python3.5/site-packages/trapes/paired_end.py", line 559
    print "RSEM did not produce any transcript alignment files for alpha chain, please check the -rsem " \
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/trapes/process_single_cell.py'...
***   File "./lib/python3.5/site-packages/trapes/process_single_cell.py", line 212
    print 'Found a full J segment as the V/J junction, ignoring this reconstruction'
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/trapes/single_end.py'...
***   File "./lib/python3.5/site-packages/trapes/single_end.py", line 121
    print "Error! not V/J/C in fasta dict"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/trapes/write_output_files.py'...
***   File "./lib/python3.5/site-packages/trapes/write_output_files.py", line 300
    print "Error! %s appear more than once in final stat dictionary" % cell_folder
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/trapes-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
